# haxr

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
docs/source/reference/: doi.rst  overview.rst  store.rst  utilities.rst
src/haxr/: __init__.py  doi.py  store.py  utilities.py
tests/: conftest.py  test_store.py  test_utilities.py
