[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "haxr"
version = "1.0.0"
description = "Companion library for the HAXR dataset"
readme = "README.md"
authors = [
    { name = "Nis Meinert", email = "nis.meinert@dlr.de" }
]
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "pandas>=3.0.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.6.1",
]

[tool.setuptools.packages.find]
exclude = ["docs", "tests"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]

[tool.pytest.ini_options]
testpaths = ["tests"]
